[package]
name = "zcash-mempool-visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.5.2"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
arboard = "3.6.1"
chrono = "0.4.44"
